Refactored Home.jsx to have a for you page and following page. Refactored service module get routes to return all documents instead of documents under a specific user only.

--- a/src/components/UserPage/UserPageNavbar.css
+++ b/src/components/UserPage/UserPageNavbar.css
@@ -6,6 +6,8 @@
   justify-content: space-between;
   background-color: transparent;
   transition: hover, 0.15s;
+  border-bottom: 0.0625rem solid #343434;
+  margin-bottom: 1rem;
 }
 
 .userpage-nav-button-wrapper {
