--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,8 +1,17 @@
+.blog-board {
+  border-radius: 0.9375rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  row-gap: 1.25rem;
+  column-gap: 1.25rem;
+}
+
 .blog-container {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 1.25rem;
   display: flex;
   padding-top: 0.9375rem;
   padding-bottom: -0.9375rem;
