--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -76,7 +76,7 @@
   font-family: 'Open Sans';
   font-size: 1.125rem;
   color: var(--text-color);
-  margin-bottom: 0.9375rem;
+  margin: none;
   text-align: center;
 }
 
@@ -84,7 +84,7 @@
   display: flex;
   flex-direction: row;
   row-gap: 0;
-  margin-bottom: 0.625rem;
+  margin-top: 1rem;
 }
 
 .follow-btn {
