--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -66,6 +66,10 @@ body {
   color: red;
 }
 
+.fa-blue {
+  color: var(--blue-color)
+}
+
 input[type="file"]::file-selector-button {
   margin-top: 0.9375rem;
   font-family: 'Open Sans';
@@ -116,6 +120,7 @@ input[type="file"]::file-selector-button:hover {
   font-weight: 600;
   color: var(--button-text-color);
   text-decoration: none;
+  white-space: nowrap;
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
   padding-left: 0.9375rem;
