--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -70,7 +70,7 @@
   font-family: 'Open Sans';
   font-size: 1.5625rem;
   text-align: center;
-  margin-bottom: 1.5625rem;
+  margin-bottom: 1rem;
   border: none;
   outline: none;
   background-color: transparent;
@@ -84,9 +84,16 @@
   width: 31.25rem;
   border: none;
   outline: none;
-  margin-bottom: 0.625rem;
+  margin-bottom: 0.925rem;
   background-color: transparent;
   color: var(--text-color);
+  resize: vertical;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  text-align: left;
+  min-height: 8rem;
+  max-height: 20rem;
+  overflow-y: auto;
 }
 
 .blog-post-btn-group {
