--- a/src/components/UserPage/EditProfile.css
+++ b/src/components/UserPage/EditProfile.css
@@ -106,3 +106,11 @@
   width: 100%;
   cursor: pointer;
 }
+
+.edit-profile-btn-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
+  gap: 1rem;
+}
