--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -103,3 +103,28 @@
   justify-content: center;
   gap: 1rem;
 }
+
+.blog-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  margin-bottom: 1.5rem;
+  gap: 1rem;
+}
+
+.blog-likes-display {
+  font-family: 'Open Sans';
+  font-size: 0.9375rem;
+  font-weight: 600;
+  color: var(--button-text-color);
+  text-decoration: none;
+  padding-top: 0.325rem;
+  padding-bottom: 0.325rem;
+  padding-left: 0.8375rem;
+  padding-right: 0.8375rem;
+  background-color: transparent;
+  border-radius: 0.6rem;
+  border: 1.5px solid gray;
+}
