--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -128,7 +128,7 @@
   color: var(--button-text-color);
   background-color: var(--button-color);
   padding: 0.625rem 0.9375rem;
-  border-radius: 100px;
+  border-radius: 1000rem;
   border: none;
   cursor: pointer;
   height: 2.5rem;
