--- a/src/components/Comments/commentChatbox.css
+++ b/src/components/Comments/commentChatbox.css
@@ -1,10 +1,14 @@
 .comment-input-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   font-family: 'Open Sans';
   font-size: 0.9375rem;
-  width: 31.25rem;
-  border: none;
+  width: 100%;
+  border: 1px solid var(--text-color-2);
+  border-radius: 0.25rem;
   outline: none;
-  margin-bottom: 0.925rem;
+  margin-bottom: 1.5rem;
   background-color: transparent;
   color: var(--text-color);
   resize: none;
@@ -12,5 +16,65 @@
   overflow-wrap: break-word;
   text-align: left;
   min-height: 2rem;
+  max-height: 20rem;
   overflow-y: hidden;
+  padding: 0.4rem 0.5rem;
+}
+
+.comment-input-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+.comment-replying-to-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 0.5rem;
+  justify-content: space-between;
+}
+
+.comment-replying-to-username {
+  color: var(--blue-color);
+  cursor: pointer;
+}
+
+.comment-replying-to-label {
+  color: var(--text-color-2);
+}
+
+.comment-reply-label {
+  color: var(--text-color-2);
+  cursor: pointer;
+}
+
+.comment-cancel-label {
+  color: var(--text-color-2);
+  cursor: pointer;
+}
+
+.comment-unsent-btn, .comment-send-btn {
+  position: absolute;
+  right: 8px;
+  bottom: 8px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.comment-unsent-btn {
+  color: var(--text-color-2)
+}
+
+.comment-send-btn {
+  color: var(--blue-color);
+}
+
+.comment-send-btn:hover {
+  color: var(--blue-color-hover);
+}
+
+.comment-cancel-label:hover {
+  color: #ccd1db;
 }
