--- a/src/components/Navigation/NavBar.css
+++ b/src/components/Navigation/NavBar.css
@@ -36,7 +36,7 @@
 
 .nav-button-label {
   color: white;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 0.9375rem;
   margin: 0;
 }
