--- a/src/components/UserPage/UserPageNavbar.css
+++ b/src/components/UserPage/UserPageNavbar.css
@@ -37,7 +37,7 @@
 .userpage-nav-button-label {
   flex: 5;
   text-align: left;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-weight: 350;
   font-size: 0.9375rem;
   color: white;
