--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -15,7 +15,10 @@
   align-items: center;
   justify-content: center;
   background-color: var(--container-color-2);
-  padding: 0.9375rem;
+  padding-top: 0.9375rem;
+  padding-bottom: -0.9375rem;
+  padding-left: 1.875rem;
+  padding-right: 1.875rem;
   border-radius: 0.9375rem;
 }
 
@@ -25,8 +28,6 @@
   align-items: center;
   justify-content: left;
   width: 100%;
-  padding-left: 0.9375rem;
-  padding-right: 0.9375rem;
 }
 
 .post-information {
@@ -149,8 +150,8 @@
   align-items: center;
   justify-content: flex-start;
   width: 100%;
-  margin-top: 1.6rem;
-  margin-bottom: 0.7rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
   gap: 1rem;
 }
 
